--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -652,96 +652,135 @@ ready for another year of being indoctirnated by the matrix and getting referall
             <button class = "m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
-        {% comment %} MAIN CONTAINER {% endcomment %}
+        {% comment %} MAIN CARASOUL {% endcomment %}
 
 
-        <div class="carousel flex flex-row w-full">
+        <div class="carousel flex flex-row w-full ">
             <div id="slide1" class="carousel-item relative w-full transition-transform duration-700 ease-in-out transform">
-
-                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
-
-                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
-                      <img
-                        src="{% static './images/library.svg' %}"
-                        alt="Library"  class = "w-[80px] h-[80px]" />
-                    </figure>
-        
-        
-                    <div class="card-body flex flex-col justify-start">
-                      <h2 class="card-title font-bold text-4xl  ">Library</h2>
-                      <p class = "text-xl">Come visit Mrs. Causey today!</p>
-                      <div class="card-actions justify-start">
-                            <button
-                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
-                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
-                    </button>
-                      </div>
+ 
+ 
+ 
+ 
+                <div class = "w-full flex flex-col items-center  flex-wrap lg:flex-nowrap lg:flex-row lg:items-start justify-center">
+ 
+ 
+                    <div class="card my-10 lg:my-0 bg-[#F8F4F1]  lg:w-1/3 w-4/6 sm:w-1/2 sm:p-5 p-2  shadow-xl h-[350px] lg:mx-10">
+ 
+ 
+                        {% comment %} TOP {% endcomment %}
+                        <div>
+                            <figure class = "flex !justify-start w-[80px] h-[80px] ">
+                                <img
+                                  src="{% static './images/library.svg' %}"
+                                  alt="Library"  class = "w-[80px] h-[80px]" />
+                              </figure>
+                        </div>
+   
+                     
+                        <div class="card-body flex flex-col justify-start">
+                            <div class = "flex flex-col gap-1">
+                                <h2 class="card-title font-bold text-4xl  ">Library</h2>
+                                <p class = "text-xl">Come visit Mrs. Causey today!</p>
+         
+                            </div>
+                       
+                          <div class="card-actions justify-start">
+                                <button
+                            class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                            Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
+                        </button>
+                          </div>
+                        </div>
+                    </div>
+   
+                    <div class="card my-10 lg:my-0 bg-[#F8F4F1]  lg:w-1/3 w-4/6 sm:w-1/2 sm:p-5 p-2  shadow-xl h-[350px] ">
+   
+                        {% comment %} TOP {% endcomment %}
+                        <div>
+                            <figure class="flex !justify-start w-[80px] h-[80px]">
+                                <img src="{% static './images/basketball.svg' %}" alt="Athletics" class="w-[80px] h-[80px]" />
+                            </figure>
+                        </div>
+                   
+                        <div class="card-body flex flex-col justify-start">
+                            <div class="flex flex-col gap-1">
+                                <h2 class="card-title font-bold text-4xl">Athletics</h2>
+                                <p class="text-xl">Nationally acclaimed sports teams!</p>
+                            </div>
+                         
+                            <div class="card-actions justify-start">
+                                <button class="text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                                    Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
+                                </button>
+                            </div>
+                        </div>
+                   
+                    </div>
+                   
+   
+   
+                    <div class="card my-10 lg:my-0 bg-[#F8F4F1]  lg:w-1/3 w-4/6 sm:w-1/2 sm:p-5 p-2  shadow-xl h-[350px] lg:mx-10">
+   
+                        {% comment %} TOP {% endcomment %}
+                        <div>
+                            <figure class="flex !justify-start w-[80px] h-[80px]">
+                                <img src="{% static './images/counseling.svg' %}" alt="Counseling" class="w-[80px] h-[80px]" />
+                            </figure>
+                        </div>
+                   
+                        <div class="card-body flex flex-col justify-start">
+                            <div class="flex flex-col gap-1">
+                                <h2 class="card-title font-bold text-4xl">Counseling</h2>
+                                <p class="text-xl">Support, Mental Health, & More!</p>
+                            </div>
+                         
+                            <div class="card-actions justify-start">
+                                <button class="text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                                    Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
+                                </button>
+                            </div>
+                        </div>
+                   
                     </div>
                 </div>
-
-                <div class="card bg-[#F8F4F1] w-1/3 p-5 shadow-xl h-[50vh] mx-10">
-
-                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
-                      <img
-                        src="{% static './images/basketball.svg' %}"
-                        alt="Shoes"  class = "w-[80px] h-[80px]" />
-                    </figure>
-        
-        
-                    <div class="card-body flex flex-col justify-start">
-                      <h2 class="card-title font-bold text-4xl ">Athletics</h2>
-                      <p class = "text-xl">Nationally acclaimed sports teams!</p>
-                      <div class="card-actions justify-start">
-                            <button
-                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
-                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
-                    </button>
-                      </div>
-                    </div>
-                </div>
-
-
-                <div class="card bg-[#F8F4F1] w-1/3 p-5 shadow-xl h-[50vh] mx-10">
-
-                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
-                      <img
-                        src="{% static './images/counseling.svg' %}"
-                        alt="Shoes"  class = "w-[80px] h-[80px]" />
-                    </figure>
-        
-        
-                    <div class="card-body flex flex-col justify-start">
-                      <h2 class="card-title font-bold text-4xl ">Counseling</h2>
-                      <p class = "text-xl">Support, Mental Health, & More!</p>
-                      <div class="card-actions justify-start">
-                            <button
-                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
-                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
-                    </button>
-                      </div>
-                    </div>
-                </div>
-
-                
+ 
+ 
+               
+               
+ 
+ 
+               
               <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                 <a  onclick="slideTo(2)" class="btn btn-circle">❮</a>
                 <a onclick="slideTo(2)" class="btn btn-circle">❯</a>
               </div>
             </div>
-            <div id="slide2" class="carousel-item relative w-full transition-transform duration-700 ease-in-out transform">
+            <div id="slide2" class="carousel-item relative w-full transition-transform duration-700 ease-in-out transform  ">
+ 
+ 
+                <div class = "w-full flex flex-col items-center  flex-wrap lg:flex-nowrap lg:flex-row lg:items-start justify-center">
 
-                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
-
-                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
-                      <img
-                        src="{% static './images/infinitecampus.svg' %}"
-                        alt="Library"  class = "w-[80px] h-[80px]" />
-                    </figure>
-        
-        
+                <div class="card my-10 lg:my-0 bg-[#F8F4F1]  lg:w-1/3 w-4/6 sm:w-1/2 sm:p-5 p-2  shadow-xl h-[350px] lg:mx-10">
+ 
+ 
+                    {% comment %} TOP {% endcomment %}
+                    <div>
+                        <figure class = "flex !justify-start w-[80px] h-[80px] ">
+                            <img
+                              src="{% static './images/infinitecampus.svg' %}"
+                              alt="Infinite Campus"  class = "w-[80px] h-[80px]" />
+                          </figure>
+                    </div>
+ 
+ 
+                 
                     <div class="card-body flex flex-col justify-start">
-                      <h2 class="card-title font-bold text-4xl  ">Infinite Campus</h2>
-                      <p class = "text-xl">View grades, records, & more!</p>
+                        <div class = "flex flex-col gap-1">
+                            <h2 class="card-title font-bold text-4xl  ">Infinite Campus</h2>
+                            <p class = "text-xl">View grades, records, & more!</p>
+     
+                        </div>
+                   
                       <div class="card-actions justify-start">
                             <button
                         class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
@@ -750,82 +789,115 @@ ready for another year of being indoctirnated by the matrix and getting referall
                       </div>
                     </div>
                 </div>
-
-
-
-
-                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
-
-                    <figure class = "flex !justify-start w-[80px] h-[80px] ">
-                      <img
-                        src="{% static './images/ptsa.svg' %}"
-                        alt="Library"  class = "w-[80px] h-[80px]" />
-                    </figure>
-        
-        
-                    <div class="card-body flex flex-col justify-start">
-                      <h2 class="card-title font-bold text-4xl  ">PTSA</h2>
-                      <p class = "text-xl">Check out our vibrant parent & teacher body!</p>
-                      <div class="card-actions justify-start">
-                            <button
-                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
-                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
-                    </button>
-                      </div>
+ 
+ 
+                <div class="card my-10 lg:my-0 bg-[#F8F4F1]  lg:w-1/3 w-4/6 sm:w-1/2 sm:p-5 p-2  shadow-xl h-[350px] ">
+ 
+ 
+                    {% comment %} TOP {% endcomment %}
+                    <div>
+                        <figure class="flex !justify-start w-[80px] h-[80px]">
+                            <img src="{% static './images/ptsa.svg' %}" alt="Athletics" class="w-[80px] h-[80px]" />
+                        </figure>
                     </div>
-                </div>
-
-
-
-
-                <div class="card bg-[#F8F4F1] w-1/3 p-5 ml-20 shadow-xl h-[50vh] mx-10">
-
-                    <figure class = "flex !justify-start w-[80px] h-[90px] ">
-                      <img
-                        src="{% static './images/organization.svg' %}"
-                        alt="Library"  class = "w-[80px] h-[80px]" />
-                    </figure>
-        
-        
+               
                     <div class="card-body flex flex-col justify-start">
-                      <h2 class="card-title font-bold text-4xl  ">JCPS</h2>
-                      <p class = "text-xl">Access general resources & more!</p>
-                      <div class="card-actions justify-start">
-                            <button
-                        class=" text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
-                        Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
-                    </button>
-                      </div>
+                        <div class="flex flex-col gap-1">
+                            <h2 class="card-title font-bold text-4xl">PTSA</h2>
+                            <p class="text-xl">Our vibrant teacher & parent community!</p>
+                        </div>
+                     
+                        <div class="card-actions justify-start">
+                            <button class="text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                                Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
+                            </button>
+                        </div>
                     </div>
+               
                 </div>
-
-
-
-
-
+               
+ 
+ 
+ 
+ 
+                <div class="card my-10 lg:my-0 bg-[#F8F4F1]  lg:w-1/3 w-4/6 sm:w-1/2 sm:p-5 p-2  shadow-xl h-[350px] lg:mx-10">
+ 
+ 
+                    {% comment %} TOP {% endcomment %}
+                    <div>
+                        <figure class="flex !justify-start w-[80px] h-[80px]">
+                            <img src="{% static './images/organization.svg' %}" alt="Counseling" class="w-[80px] h-[80px]" />
+                        </figure>
+                    </div>
+               
+                    <div class="card-body flex flex-col justify-start">
+                        <div class="flex flex-col gap-1">
+                            <h2 class="card-title font-bold text-4xl">JCPS</h2>
+                            <p class="text-xl">Acccess general resources & more!</p>
+                        </div>
+                     
+                        <div class="card-actions justify-start">
+                            <button class="text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
+                                Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
+                            </button>
+                        </div>
+                    </div>
+               
+                </div>
+ 
+ 
+            </div>
+ 
+ 
+              
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
               <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                 <a  onclick="slideTo(1)" class="btn btn-circle">❮</a>
                 <a onclick="slideTo(1)" class="btn btn-circle">❯</a>
               </div>
-
+ 
+ 
             </div>
-            
-    
+           
+   
           </div>
-
-
-          
-
-        
-
-
-
-
-
-        
-
-
-        </div> 
+ 
+ 
+ 
+ 
+         
+ 
+ 
+       
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+       
+ 
+ 
+ 
+ 
+        </div>
+ 
+ 
+ 
+ 
 
     </section> 
 
