--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -20,7 +20,7 @@
 
     
 </head>
-<body>
+<body class = "scroll-smooth	">
 
 
 
@@ -82,7 +82,7 @@
                         </ul>
                     </details>
                     <details>
-                        <summary class="text-white text-lg text-transform: uppercase tracking-widest"> <a target = "_blank" href = "https://www.jefferson.kyschools.us/o/manual/page/dupont-manual-admissions">Admissions</a></summary>
+                        <summary class="text-white text-lg text-transform: uppercase tracking-widest"> <a target = "_blank" href = "https://sites.google.com/jefferson.kyschools.us/dupontmanualadmissions">Admissions</a></summary>
                         {% comment %} <ul class=" z-50 p-2 text-black text-lg">
                          
                         </ul> {% endcomment %}
@@ -173,7 +173,7 @@
                 Leading the Way in Kentucky Education – Where Students Excel and Dreams Take Flight
             </p>
             <div class="mt-5 flex md:mt-8 justify-center lg:justify-start">
-                <div class="rounded-md hover:scale-125 transition ease-in-out delay-100  "><a href=""
+                <div class="rounded-md hover:scale-125 transition ease-in-out delay-100  "><a href="#our-mission"
                         class=" flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-white transition duration-150  ease-in-out bg-[#9D2235] hover:font-bold  border border-transparent rounded-full focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
                         About Us
                     </a></div>
@@ -344,15 +344,15 @@
     
         <!-- Middle Section with Course Names -->
         <div class="text-4xl flex flex-wrap justify-center space-x-4" data-aos="fade-in" data-aos-duration = "3000">
-            <p>Biomedical</p>
-            <p>Communication</p>
-            <p>Computer Science</p>
-            <p>Java</p>
-            <p>Education</p>
-            <p>Health Sciences</p>
-            <p>Science</p>
+            <p>Engineering | </p>
+            <p>Journalism | </p>
+            <p>Computer Science | </p>
+            <p>Research | </p>
+            <p>Physics | </p>
+            <p>Health Sciences | </p>
+            <p>Spanish | </p>
             <p>Psychology</p>
-            <p class = "font-bold text-[#9D2235]">& More</p>
+            <p class = "font-bold text-[#9D2235]">& more exciting classes!</p>
         </div>
     
     <!-- Buttons -->
@@ -385,7 +385,7 @@
         
         <div data-aos="zoom-in-up" data-aos-duration = "2000"  class = "lg:w-1/2 w-full p-5 md:p-0 flex flex-center flex-col" style = "margin: 20px auto; "> 
             <h1 class = "m-auto text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Manual <span class = "text-[#9D2235] font-bolder italic " >News</span></h1>
-            <p class = " mt-5 text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Award winning journalism conducted by our talented J&C students!</p>
+            <p class = " mt-5 text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Nationally acclaimed news articles, magazine publications, yearbooks, & more!</p>
             <button class = "red-arrow-box m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center"><a target = "_blank" href = "https://manualredeye.com">View All News</a><span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
@@ -559,7 +559,7 @@
 
         <div  data-aos="zoom-in-up" data-aos-duration = "2000" class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
             <h1 class = "m-auto md:w-2/3 text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Programs For <span class = "text-[#9D2235] font-bolder italic " >Every Student</span></h1>
-            <p class = " mt-5  md:w-2/3 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Manual High School offers a plethora of magnet programs that cater to diverse student interests and talents  </p>
+            <p class = " mt-5  md:w-2/3 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Manual High School offers a plethora of magnet programs that cater to diverse student interests and talents. Regardless if you like math or painting, Manual has a program for you!  </p>
             <button class = "red-arrow-box m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
@@ -576,7 +576,7 @@
                             MATH, SCIENCE, TECHNOLOGY (MST)
                             
                         </h2>
-                        <p class="lg:text-xl md:text-lg  text-xl text-white font-noto-serif mt-5">Designed to provide a rigorous curriculum that prepares students to be successful in any academic program at any college in the country.
+                        <p class="lg:text-xl md:text-lg  text-xl text-white font-noto-serif mt-5">Unlock the world of innovation with advanced coursework in mathematics, science, and technology. Perfect for students passionate about problem-solving, scientific discovery, and cutting-edge technology.
                         </p>
                     </div>
                 </div>
@@ -587,7 +587,9 @@
                             HIGH SCHOOL UNIVERSITY (HSU)
                             
                         </h2>
-                        <p class="lg:text-xl md:text-lg text-xl text-white font-noto-serif mt-5">Seeks students with the potential for high academic achievement. Diversity is evident in both the student body and their courses of study.
+                        <p class="lg:text-xl md:text-lg text-xl text-white font-noto-serif mt-5">Pursue a rigorous academic experience that mirrors a college environment. With opportunities for dual credit and advanced placement, this program is ideal for students focused on academic excellence.
+
+
 
 
                         </p>
@@ -607,7 +609,7 @@
                             JOURNALISM & COMMUNICATION (J&C)
                            
                         </h2>
-                        <p class="lg:text-lg md:text-md text-white text-xl  font-noto-serif">Unique and exciting high school program that challenges students to be innovative, enterprising, creative, and well-versed in media and technology
+                        <p class="lg:text-lg md:text-md text-white text-xl  font-noto-serif">Channel your voice through writing, media production, and public speaking. This program equips students with the skills needed to excel in print, broadcast, and digital journalism.
                         </p>
                     </div>
 
@@ -624,7 +626,9 @@
                             YOUTH PERFORMING ARTS SCHOOL (YPAS)
                            
                         </h2>
-                        <p class="lg:text-lg md:text-md text-white text-xl  font-noto-serif">Students have the distinct opportunity to train, educate, and nurture today’s young talent to become tomorrow’s artists
+                        <p class="lg:text-lg md:text-md text-white text-xl  font-noto-serif">Step into the spotlight with our dynamic Performing Arts program, offering specialized training in theater, music, and dance. Students hone their talents and perform in professional-level productions.
+
+
                         </p>
                     </div>
 
@@ -639,7 +643,7 @@
                             VISUAL ART (VA)
                            
                         </h2>
-                        <p class="lg:text-lg md:text-md text-white  text-xl font-noto-serif">Artistically gifted students are able to pursue an art oriented career. During their four years at Manual, students will produce a portfolio of art work for acceptance to a university or a professional college of art.
+                        <p class="lg:text-lg md:text-md text-white  text-xl font-noto-serif">Explore your creativity and artistic expression through immersive, hands-on courses in painting, sculpture, photography, and more. A program designed for budding artists to refine their craft.
                         </p>
                     </div>
 
@@ -664,16 +668,16 @@
 {% comment %} Student Resources Section {% endcomment %}
     <section class = "my-10 "> 
 
-        <div  class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
+        <div data-aos="zoom-in-up" data-aos-duration = "2000"  class = " w-5/6 md:w-full md:px-5 flex flex-center flex-col" style = "margin: 20px auto; "> 
             <h1 class = "m-auto md:w-2/3 text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Student <span class = "text-[#9D2235] font-bolder italic " >Resources</span></h1>
-            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Manual High School offers a plethora of student resources. This is some dummy text here. This is some dummy text here. </p>
+            <p class = " mt-5  md:w-3/6 md:text-center md:mx-auto  text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Manual High School provides students with a wide range of resources to help them thrive academically, socially, and emotionally.</p>
             <button class = " red-arrow-box m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
         </div> 
 
         {% comment %} MAIN CARASOUL {% endcomment %}
 
 
-        <div class="carousel flex flex-row w-full ">
+        <div data-aos="fade-in" data-aos-duration = "2000"  class="carousel flex flex-row w-full ">
             <div id="slide1" class="carousel-item relative w-full transition-transform duration-700 ease-in-out transform">
  
  
@@ -698,15 +702,17 @@
                         <div class="card-body flex flex-col justify-start">
                             <div class = "flex flex-col gap-1">
                                 <h2 class="card-title font-bold text-4xl  ">Library</h2>
-                                <p class = "text-xl">Come visit Mrs. Causey today!</p>
+                                <p class = "text-xl">Access our myriad of books, resources, & more!</p>
          
                             </div>
                        
                           <div class="card-actions justify-start">
+                            <a href = "https://jcpsky.libguides.com/dupontmanuallibrary" target = "_blank"> 
                                 <button 
                             class=" red-arrow-box text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
                             Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
                         </button>
+                    </a>
                           </div>
                         </div>
                     </div>
@@ -727,9 +733,12 @@
                             </div>
                          
                             <div class="card-actions justify-start">
+                                <a href = "/athletics" target = "_blank"> 
+                                    <button 
                                 <button class="red-arrow-box text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
                                     Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
                                 </button>
+                            </a>
                             </div>
                         </div>
                    
@@ -753,9 +762,12 @@
                             </div>
                          
                             <div class="card-actions justify-start">
+                                <a href = "https://sites.google.com/jefferson.kyschools.us/dupontmanualcounseling/home" target = "_blank"> 
+                                    <button 
                                 <button class=" red-arrow-box text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
                                     Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
                                 </button>
+                            </a>
                             </div>
                         </div>
                    
@@ -800,10 +812,14 @@
                         </div>
                    
                       <div class="card-actions justify-start">
+
+                        <a href = "https://jcpsky.infinitecampus.org/campus/portal/students/jcps.jsp" target = "_blank"> 
+
                             <button
                         class=" red-arrow-box text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
                         Visit <span> <img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"> </span>
                     </button>
+                </a>
                       </div>
                     </div>
                 </div>
@@ -826,9 +842,13 @@
                         </div>
                      
                         <div class="card-actions justify-start">
+
+                            <a href = "https://manualptsa.com/" target = "_blank"> 
+
                             <button class="red-arrow-box text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
                                 Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
                             </button>
+                        </a>
                         </div>
                     </div>
                
@@ -855,9 +875,12 @@
                         </div>
                      
                         <div class="card-actions justify-start">
+                            <a href = "https://www.jefferson.kyschools.us/" target = "_blank"> 
+
                             <button class="red-arrow-box text-center p-5 pt-3 pb-3 flex font-noto-serif font-bold border border-2 border-[#9D2235] text-lg justify-center">
                                 Visit <span><img class="ml-3 w-[30px]" src="{% static './images/rightarrow.svg' %}"></span>
                             </button>
+                        </a>
                         </div>
                     </div>
                
@@ -924,7 +947,7 @@
 
        {% comment %} TOP SECTION {% endcomment %}
         <div class="w-full flex sm:flex-row flex-col justify-between p-5 md:p-10">
-            <div class="lg:w-2/6 sm:w-1/2 text-left w-full text-center sm:text-left p-4 rounded flex flex-col">
+            <div data-aos="fade-in" data-aos-duration = "2000" class="lg:w-2/6 sm:w-1/2 text-left w-full text-center sm:text-left p-4 rounded flex flex-col">
                 <img class = "mx-auto sm:mx-0"src = "{% static './images/manuallogo.png' %}" style = "width: 100px; height: 100px"> 
                 <h1 class = "text-5xl mt-3 font-bold mb-2  text-white  ">About Our School</h1> 
 
@@ -937,16 +960,18 @@
                 
             </div>
 
-            <div class="lg:w-3/6 md:w-4/6  w-full text-center sm:text-left sm:w-4/6 p-4 rounded flex flex-col text-left">
-                <p class = "text-[#D8E3FB] text-2xl">We are the best high school in Kentucky. This is some text here.  This is some text here.  This is some text here.  This is some text here.  This is some text here.  This is some text here.  This is some text here.  </p>
-                <p class = "font-bold text-xl text-white mt-10">Founded in 1889. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. This is some text about our history. </p>
+            <div data-aos="fade-in" data-aos-duration = "2000" class="lg:w-3/6 md:w-4/6  w-full text-center sm:text-left sm:w-4/6 p-4 rounded flex flex-col text-left">
+                <p class = "text-[#D8E3FB] text-2xl">We are proud to be the best high school in Kentucky, consistently ranked #1 for academic excellence and innovation. Our students excel in rigorous coursework, cutting-edge technology, and extracurricular activities, preparing them for top universities and careers. With diverse magnet programs and dedicated faculty, we offer an enriching environment where every student can explore their passions and achieve their full potential.
+
+                </p>
+                <p class = "font-bold text-xl text-white mt-10">Founded in 1889, Dupont Manual High School has a long-standing tradition of excellence in education. Originally established as a manual training school, we have evolved to become a hub of academic, artistic, and technological achievement. Over the decades, we’ve nurtured generations of leaders, thinkers, and innovators, adapting to the changing world while honoring our historic roots.                </p>
 
             </div>
         </div>
 
         {% comment %} BOTTOM SECTION {% endcomment %}
 
-        <div class="flex flex-col items-center">
+        <div data-aos="fade-in" data-aos-duration = "2000" class="flex flex-col items-center">
             <figure>
                 <img src="{% static './images/topmatrix.png' %}">
             </figure>
@@ -961,7 +986,7 @@
                     {% comment %} text section {% endcomment %}
                     <div class = "sm:w-1/2 w-full text-center"> 
                     <p class="text-white lg:text-5xl sm:text-3xl text-xl md:text-4xl font-bold">Video Tour Of Manual</p>
-                    <p class = "sm:mt-5 mt-3 lg:text-xl text-sm sm:text-md md:text-lg font-noto-serif text-white font-bold ">Take a tour of Dupont Manual and learn why we are the best high school in the entire state of Kentucky. This here is dummy text.</p>
+                    <p class = "sm:mt-5 mt-3 lg:text-xl text-sm sm:text-md md:text-lg font-noto-serif text-white font-bold ">Take a tour of Dupont Manual and learn what makes us the #1 high school in all of Kentucky!</p>
 
                     </div> 
 
@@ -1010,8 +1035,9 @@
 
       </footer>
 
-      <div class = " bg-[#9D2235] mx-auto text-center pb-5  ">
+      <div  class = " bg-[#9D2235] mx-auto text-center pb-5  ">
 
+        <div data-aos="zoom-in-up" data-aos-duration = "1000">
         <h1 class = "text-4xl text-white font-bold">Designed & Developed By: </h1>
         <p class="text-white mt-3 text-2xl text-center">
             <span>
@@ -1030,6 +1056,7 @@
             </span>
         </p>
         <p class = "text-white w-1/3 mt-3 mx-auto" >Also special shoutout to the best teacher at Manual... Mr. Dallmann! We Love You!</p>
+    </div>
         </div>
     
       <script>
